# autoware.peeradon_thesis

./: autoware.repos  thesis.repos
doc/: behavior_path_planner_architecture.md  bt_flow_object_detection_classification.md  bt_implementation_step1_guide.md  bt_integration_strategy.md  bt_pytrees_monitoring_guide.md  module_execution_logic.md  module_skip_logic.md  planner_manager_complete_design.md  planning_analysis_obstacle_avoidance.md  planning_execution_cycle.md  python_testing_guide_obstacle_classification.md  stop_conditions_analysis.md
test/: AUTOWARE_CODE_TO_COPY.md  CMakeLists.txt  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  bt_stop_for_obstacle.cpp  simple_bt_obstacle_avoidance.cpp
